# nba_search

./: README.md  nba_semantic_search.md  pyproject.toml
data/: bm25_index.pkl  corpus.jsonl
docs/: concurrency_insights.md
docs/superpowers/plans/: 2026-04-15-embedding-benchmark.md
src/nba_search/: index.py  ingest.py  models.py
tests/: test_index.py
