[project]
name = "nba-search"
version = "0.1.0"
description = "NBA player/team search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.4",
    "numpy>=1.26",
    "pydantic>=2.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32",
    "sentence-transformers>=3.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nba_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/nba_search --cov-report=term-missing"

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
